@@ -1,11 +1,13 @@
 package ua.yet.adv.java.reflection;
 
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.util.HashMap;
 import java.util.Map;
 
+import lombok.extern.slf4j.Slf4j;
 import ua.yet.adv.java.annotation.Init;
 import ua.yet.adv.java.annotation.Service;
 
@@ -15,9 +17,10 @@ import ua.yet.adv.java.annotation.Service;
  * methods marked with annotation @{@link Init} if <code>lazyLoad=false</code>.
  * In addition to that the class showcases the possibility to access private
  * fields and methods.
- * 
+ *
  * @author Yuriy Tkach
  */
+@Slf4j
 public class ServiceLoader {
 
     /**
@@ -28,9 +31,8 @@ public class ServiceLoader {
     /**
      * Main method that calls service loading by providing full class name of
      * the service
-     * 
-     * @param args
-     *            No arguments are expected
+     *
+     * @param args No arguments are expected
      */
     public static void main(String[] args) {
         loadService("ua.yet.adv.java.annotation.services.SimpleService");
@@ -43,29 +45,22 @@ public class ServiceLoader {
      * Method gets the class object from the provided <code>className</code>.
      * Then inspects the class to find annotation @{@link Service}. If found,
      * then calls {@link #createAndInitService(Class)} method.
-     * 
-     * @param className
-     *            Full class name of the service
+     *
+     * @param className Full class name of the service
      */
     private static void loadService(String className) {
         try {
             Class<?> clazz = Class.forName(className);
             if (clazz.isAnnotationPresent(Service.class)) {
 
-                try {
-                    createAndInitService(clazz);
-
-                } catch (InstantiationException | IllegalAccessException e) {
-                    System.err.println("Failed to create service instance for "
-                            + className + ": " + e.getMessage());
-                }
+                createAndInitService(clazz);
 
             } else {
-                System.out.println("Failed to load service " + className
+                log.info("Failed to load service " + className
                         + ": No Service annotation present");
             }
         } catch (ClassNotFoundException e) {
-            System.err.println("Failed to load service " + className + ": "
+            log.error("Failed to load service " + className + ": "
                     + e.getMessage());
         }
     }
@@ -73,30 +68,32 @@ public class ServiceLoader {
     /**
      * Creates new instance of the service class and puts it into the map. If
      * <code>lazyLoad=false</code> then invokes init methods.
-     * 
-     * @param clazz
-     *            Service class object
-     * @throws InstantiationException
-     *             If instance of the service object can't be created
-     * @throws IllegalAccessException
-     *             If constructor of the service object can't be accessed
+     *
+     * @param clazz Service class object
+     * @throws InstantiationException If instance of the service object can't be created
+     * @throws IllegalAccessException If constructor of the service object can't be accessed
      */
-    private static void createAndInitService(Class<?> clazz)
-            throws InstantiationException, IllegalAccessException {
-        Object serviceObj = clazz.newInstance();
+    private static void createAndInitService(Class<?> clazz){
+        try {
+            Object serviceObj = clazz.getDeclaredConstructor().newInstance();
 
-        Service annotation = clazz.getAnnotation(Service.class);
+            Service annotation = clazz.getAnnotation(Service.class);
 
-        servicesMap.put(annotation.name(), serviceObj);
+            servicesMap.put(annotation.name(), serviceObj);
 
-        System.out.println("Added service instance for " + clazz.getName()
-                + ": " + annotation.name());
+            log.info("Added service instance for " + clazz.getName()
+                    + ": " + annotation.name());
 
-        if (!annotation.lazyLoad()) {
-            setPrivateField(serviceObj);
-            invokeInitMethods(clazz.getDeclaredMethods(), serviceObj);
-        } else {
-            System.out.println("  Service will lazy load");
+            if (!annotation.lazyLoad()) {
+                setPrivateField(serviceObj);
+                invokeInitMethods(clazz.getDeclaredMethods(), serviceObj);
+            } else {
+                log.info("  Service will lazy load");
+            }
+        } catch (InstantiationException | NoSuchMethodException
+                | InvocationTargetException |IllegalAccessException e) {
+            log.error("Failed to create service instance for "
+                    + clazz.getName() + ": " + e.getMessage());
         }
     }
 
@@ -106,45 +103,43 @@ public class ServiceLoader {
      * <code>true<code>.
      * If invocation throws exception, then catching it and re-throwing it if
      * <code>suppressException=false</code>. Otherwise, just output it.
-     * 
-     * @param methods
-     *            Array of service's methods
-     * @param serviceObj
-     *            Service object
+     *
+     * @param methods    Array of service's methods
+     * @param serviceObj Service object
      */
     private static void invokeInitMethods(Method[] methods, Object serviceObj) {
         for (Method method : methods) {
             if (method.isAnnotationPresent(Init.class)) {
 
                 if (method.getParameterTypes().length > 0) {
-                    System.out.println(
-                            "  Cannot call init method with arguments: "
+                    log.info("  Cannot call init method with arguments: "
                                     + method.getName());
                 } else {
-
-                    try {
-
-                        if (!Modifier.isPublic(method.getModifiers())) {
-                            method.setAccessible(true);
-                            System.out.println("  Made method accessible: "
-                                    + method.getName());
-                        }
-                        method.invoke(serviceObj);
-
-                        System.out.println("  Invoked init method for service: "
-                                + method.getName());
-
-                    } catch (Throwable e) {
-                        Init initAnnotation = method.getAnnotation(Init.class);
-
-                        if (initAnnotation.suppressException()) {
-                            System.out.println("  Error occured during init: "
-                                    + e.getMessage());
-                        } else {
-                            throw new RuntimeException(e);
-                        }
-                    }
+                    invokeInitMethod(serviceObj, method);
                 }
+            }
+        }
+    }
+
+    private static void invokeInitMethod(Object serviceObj, Method method) {
+        try {
+            if (!Modifier.isPublic(method.getModifiers())) {
+                method.setAccessible(true);
+                log.info("  Made method accessible: "
+                        + method.getName());
+            }
+            method.invoke(serviceObj);
+
+            log.info("  Invoked init method for service: "
+                    + method.getName());
+        } catch (Exception e) {
+            Init initAnnotation = method.getAnnotation(Init.class);
+
+            if (initAnnotation.suppressException()) {
+                log.info("  Error occurred during init: "
+                        + e.getMessage());
+            } else {
+                throw new RuntimeException(e);
             }
         }
     }
@@ -153,9 +148,8 @@ public class ServiceLoader {
      * Trying to set private field value of the service object. The method will
      * fail if the field is not found. The method won't fail if the field is
      * found, however, the value won't change if the field is final primitive
-     * 
-     * @param serviceObj
-     *            Object of the service
+     *
+     * @param serviceObj Object of the service
      */
     private static void setPrivateField(Object serviceObj) {
         try {
@@ -169,10 +163,9 @@ public class ServiceLoader {
 
         } catch (SecurityException | IllegalArgumentException
                 | IllegalAccessException e) {
-            System.out.println(
-                    "  Failed to set private field: " + e.getMessage());
+            log.info("  Failed to set private field: " + e.getMessage());
         } catch (NoSuchFieldException e) {
-            System.out.println("  Field 'inits' is not found in class");
+            log.info("  Field 'inits' is not found in class");
         }
     }
 }
